Opgaver med Gauss elimination

--- a/linearalgebra/03gausselimination.tex
+++ b/linearalgebra/03gausselimination.tex
@@ -63,7 +63,7 @@ A = \left[\begin{array}{rr|r}
 Lav et nul på pladsen over $a_{22}$.
 
 \hint
-Del række to med $-5$.
+Træk tre gange række 2 fra række 1
 \[
 A = \left[\begin{array}{rr|r}
 1 & 0 & \frac{3}{5} \\ 
@@ -74,28 +74,601 @@ A = \left[\begin{array}{rr|r}
 
 \end{exercise}
 
-
+\newpage
 
 \begin{exercise}{Gauss elimination 2}
-
-Test
-
-$A = $
-\begin{answermatrix}
-1 & 0 \\
-0 & 1
-\end{answermatrix}
-
-\hint
-\[
-A = \left[\begin{array}{rr|r}
-1 & 0 \\ 
-0 & 1
-\end{array} \right]
-\]
-
-
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 4 & 10 \\ 
+	2 & 3 & 5
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & -2 \\
+		0 & 1 & 3
+	\end{answermatrix}
+	
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk to gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 4 & 10 \\ 
+	0 & -5 & -15
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Del række to med $-5$.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 4 & 10 \\ 
+	0 & 1 & 3
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen over $a_{22}$.
+	
+	\hint
+	Træk fire gange række to fra række et
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 0 & -2 \\ 
+	0 & 1 & 3
+	\end{array} \right]
+	\]
+	
+	
 \end{exercise}
+
+\newpage
+
+\begin{exercise}{Gauss elimination 3}
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rr|r}
+	6 & 12 & 9 \\ 
+	5 & 2 & 4
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & \frac{5}{8} \\
+		0 & 1 & \frac{7}{16}
+	\end{answermatrix}
+	
+	\hint
+	Få et et tal til at stå på $a_{11}$.
+	
+	\hint
+	Træk række to fra række et.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 10 & 5 \\ 
+	5 & 2 & 4
+	\end{array} \right]
+	\]
+	
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk fem gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 10 & 5 \\ 
+	0 & -48 & -21
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Del række to med $-48$.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 10 & 5 \\ 
+	0 & 1 & \frac{7}{16}
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen over $a_{22}$.
+	
+	\hint
+	Træk ti gange række to fra række et.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 0 & \frac{5}{8} \\ 
+	0 & 1 & \frac{7}{16}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Gauss elimination 4}
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rr|r}
+	4 & 4 & 8 \\ 
+	3 & 7 & 2
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & 3 \\
+		0 & 1 & -1
+	\end{answermatrix}
+	
+	\hint
+	Få et et tal til at stå på $a_{11}$.
+	
+	\hint
+	Træk række to fra række et.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & -3 & 6 \\ 
+	3 & 7 & 2
+	\end{array} \right]
+	\]
+	
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk 3 gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & -3 & 6 \\ 
+	0 & 16 & -16
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Del række to med $16$.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & -3 & 6 \\ 
+	0 & 1 & -1
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen over $a_{22}$.
+	
+	\hint
+	Læg tre gange række to til række et
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 0 & 3 \\ 
+	0 & 1 & -1
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Gauss elimination 5}
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rr|r}
+	-1 & 7 & 2 \\ 
+	4 & 5 & 7
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & \frac{13}{11} \\
+		0 & 1 & \frac{5}{11}
+	\end{answermatrix}
+	
+	\hint
+	Få et et tal til at stå på $a_{11}$.
+	
+	\hint
+	Gang række et med (-1).
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & -7 & -2 \\ 
+	4 & 5 & 7
+	\end{array} \right]
+	\]
+	
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk 4 gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & -7 & -2 \\ 
+	0 & 33 & 15
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Del række to med $33$.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & -7 & -2 \\ 
+	0 & 1 & \frac{5}{11}
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen over $a_{22}$.
+	
+	\hint
+	Læg syv gange række to til række et.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 0 & \frac{13}{11} \\ 
+	0 & 1 & \frac{5}{11}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Gauss elimination 6}
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rr|r}
+	8 & 2 & 2 \\ 
+	3 & 5 & 22
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & -1 \\
+		0 & 1 & 5
+	\end{answermatrix}
+	
+	\hint
+	Få et et tal til at stå på $a_{11}$.
+	
+	\hint
+	Del række et med 8. 
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & \frac{1}{4} & \frac{1}{4} \\ 
+	3 & 5 & 22
+	\end{array} \right]
+	\]
+	
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk 3 gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & \frac{1}{4} & \frac{1}{4} \\ 
+	0 & \frac{17}{4} & \frac{85}{4}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Gang række to med $\frac{4}{17}$.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & \frac{1}{4} & \frac{1}{4} \\ 
+	0 & 1 & 5
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen over $a_{22}$.
+	
+	\hint
+	Træk $\frac{1}{4}$ række to fra række et.
+	\[
+	A = \left[\begin{array}{rr|r}
+	1 & 0 & -1 \\ 
+	0 & 1 & 5
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Gauss elimination 7}
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 4 & 6 \\
+	2 & 3 & 2 & 2 \\
+	3 & 1 & 2 & 4
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & 0 & \frac{2}{3} \\
+		0 & 1 & 0 & -\frac{2}{3} \\
+		0 & 0 & 1 & \frac{4}{3}
+	\end{answermatrix}
+	
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk 2 gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 4 & 6 \\
+	0 & 3 & -6 & -10 \\
+	3 & 1 & 2 & 4
+	\end{array} \right]
+	\]
+	
+	\hint
+	Træk 3 gange række et fra række tre.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 4 & 6 \\
+	0 & 3 & -6 & -10 \\
+	0 & 1 & -10 & -14
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Byt række to med række tre.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 4 & 6 \\
+	0 & 1 & -10 & -14 \\
+	0 & 3 & -6 & -10
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen under $a_{22}$.
+	
+	\hint
+	Træk 3 gange række to fra række tre.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 4 & 6 \\
+	0 & 1 & -10 & -14 \\
+	0 & 0 & 24 & 32
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{33}$.
+
+	\hint
+	Del række tre med 24.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 4 & 6 \\
+	0 & 1 & -10 & -14 \\
+	0 & 0 & 1 & \frac{4}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav nuller over $a_{33}$.
+	
+	\hint
+	Træk 4 gange række tre fra række 1
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 1 & \frac{2}{3} \\
+	0 & 1 & -10 & -14 \\
+	0 & 0 & 1 & \frac{4}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Læg 10 gange række tre til række to
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 1 & \frac{2}{3} \\
+	0 & 1 & 0 & -\frac{2}{3} \\
+	0 & 0 & 1 & \frac{4}{3}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Gauss elimination 8}
+	
+	
+	Kør Gauss elimination på matricen herunder.
+	
+	\[
+	A = \left[\begin{array}{rrr|r}
+	-2 & -4 & 4 & -18 \\
+	4 & 5 & -6 & 26 \\
+	2 & -4 & 3 & -7
+	\end{array} \right]
+	\]
+	
+	Efter Gauss elimination ser matricen ud på følgende måde
+	\begin{answermatrix}
+		1 & 0 & 0 & 3 \\
+		0 & 1 & 0 & 4 \\
+		0 & 0 & 1 & 1
+	\end{answermatrix}
+	
+	\hint
+	Lav et et tal på pladsen $a_{11}$.
+	
+	\hint
+	Gang række et med $-\frac{1}{2}$.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 2 & -2 & 9 \\
+	4 & 5 & -6 & 26 \\
+	2 & -4 & 3 & -7
+	\end{array} \right]
+	\]
+		
+	\hint
+	Placer nuller under et tallet i $a_{11}$.
+	
+	\hint
+	Træk 4 gange række et fra række to.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 2 & -2 & 9 \\
+	0 & -3 & 2 & -10 \\
+	2 & -4 & 3 & -7
+	\end{array} \right]
+	\]
+	
+	\hint
+	Træk 2 gange række et fra række tre.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 2 & -2 & 9 \\
+	0 & -3 & 2 & -10 \\
+	0 & -8 & 7 & -25
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{22}$.
+	
+	\hint
+	Gang række to med $- \frac{1}{3}$.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 2 & -2 & 9 \\
+	0 & 1 & -\frac{2}{3} & \frac{10}{3} \\
+	0 & -8 & 7 & -25
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Lav et nul på pladsen under og over $a_{22}$.
+	
+	\hint
+	Læg 8 gange række to til række tre.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 2 & -2 & 9 \\
+	0 & 1 & -\frac{2}{3} & \frac{10}{3} \\
+	0 & 0 & \frac{5}{3} & \frac{5}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Træk 2 gange række to fra række et.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0  & -\frac{2}{3} & \frac{7}{3} \\
+	0 & 1 & -\frac{2}{3} & \frac{10}{3} \\
+	0 & 0 & \frac{5}{3} & \frac{5}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav et et tal på pladsen $a_{33}$.
+	
+	\hint
+	Gang række tre med $\frac{3}{5}$.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0  & -\frac{2}{3} & \frac{7}{3} \\
+	0 & 1 & -\frac{2}{3} & \frac{10}{3} \\
+	0 & 0 & 1 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Lav nuller over $a_{33}$.
+	
+	\hint
+	Læg $\frac{2}{3}$ række tre til række to.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0  & -\frac{2}{3} & \frac{7}{3} \\
+	0 & 1 & 0 & 4  \\
+	0 & 0 & 1 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Læg $\frac{2}{3}$ række tre til række et.
+	\[
+	A = \left[\begin{array}{rrr|r}
+	1 & 0 & 0 & 3 \\
+	0 & 1 & 0 & 4\\
+	0 & 0 & 1 & 1
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+
 
 
 
