Opgaver med determinanter

--- a/linearalgebra/04determinanter.tex
+++ b/linearalgebra/04determinanter.tex
@@ -136,6 +136,314 @@ Forenkel resultatet.
 \end{exercise}
 
 
+\begin{exercise}{Determinanter - 4}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rr}
+	2 & 5 \\ 
+	1 & 5 
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{5}
+	
+	\hint
+	Determinanten af en $2 \times 2$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rr}
+	a & b \\ 
+	c & d 
+	\end{array} \right] \right) = a \cdot d - c \cdot b
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = 2 \cdot 5 - 1 \cdot 5
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) = 5
+	\]
+	
+\end{exercise}
+
+
+\begin{exercise}{Determinanter - 5}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rr}
+	-2 & -1 \\ 
+	7 & -2 
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{11}
+	
+	\hint
+	Determinanten af en $2 \times 2$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rr}
+	a & b \\ 
+	c & d 
+	\end{array} \right] \right) = a \cdot d - c \cdot b
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = (-2) \cdot (-2) - 7 \cdot (-1)
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) = 11
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Determinanter - 6}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rr}
+	-2 & 3 \\ 
+	-4 & 5 
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{2}
+	
+	\hint
+	Determinanten af en $2 \times 2$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rr}
+	a & b \\ 
+	c & d 
+	\end{array} \right] \right) = a \cdot d - c \cdot b
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = (-2) \cdot 5 - (-4) \cdot 3
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) = 2
+	\]
+	
+\end{exercise}
+
+
+\begin{exercise}{Determinanter - 7}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rrr}
+	2 & 3 & 7 \\ 
+	5 & -2 & 1 \\
+	3 & 4 & 2
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{145}
+	
+	\hint
+	Determinanten af en $3 \times 3$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rrr}
+	a & b & c \\ 
+	d & e & f \\
+	g & h & i
+	\end{array} \right] \right) = a \cdot e \cdot i + d \cdot h \cdot c + g \cdot b \cdot f - a \cdot h \cdot f - d \cdot b \cdot i - g \cdot e \cdot c
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = 2 \cdot (-2) \cdot 2 + 5 \cdot 4 \cdot 7 + 3 \cdot 3 \cdot 1 - 2 \cdot 4 \cdot 1 - 5 \cdot 3 \cdot 2 - 3 \cdot (-2) \cdot 7
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) = -8 + 140 + 9 - 8 -30 + 42 = 145
+	\]
+	
+\end{exercise}
+
+
+\begin{exercise}{Determinanter - 8}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rrr}
+	-2 & 1 & 4 \\ 
+	7 & 8 & -1 \\
+	5 & -4 & 2
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{-315}
+	
+	\hint
+	Determinanten af en $3 \times 3$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rrr}
+	a & b & c \\ 
+	d & e & f \\
+	g & h & i
+	\end{array} \right] \right) = a \cdot e \cdot i + d \cdot h \cdot c + g \cdot b \cdot f - a \cdot h \cdot f - d \cdot b \cdot i - g \cdot e \cdot c
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = -2 \cdot 8 \cdot 2 + 7 \cdot (-4) \cdot 4 + 5 \cdot 1 \cdot (-1) - (-2) \cdot (-4) \cdot (-1) - 7 \cdot 1 \cdot 2 - 5 \cdot 8 \cdot 4
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) = -32 - 112 - 5 + 8 - 14 - 160 = -315
+	\]
+	
+\end{exercise}
+
+
+\begin{exercise}{Determinanter - 9}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rrr}
+	4 & 5 & 9 \\ 
+	3 & 4 & 8 \\
+	-2 & 1 & 0
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{-13}
+	
+	\hint
+	Determinanten af en $3 \times 3$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rrr}
+	a & b & c \\ 
+	d & e & f \\
+	g & h & i
+	\end{array} \right] \right) = a \cdot e \cdot i + d \cdot h \cdot c + g \cdot b \cdot f - a \cdot h \cdot f - d \cdot b \cdot i - g \cdot e \cdot c
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = 4 \cdot 4 \cdot 0 + 5 \cdot 8 \cdot (-2) + 3 \cdot 1 \cdot 9 - 4 \cdot 1 \cdot 8 - 3 \cdot 5 \cdot 0 - (-2) \cdot 4 \cdot 9
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) =  0 - 80 + 27 - 32 - 0 + 72 = -13
+	\]
+	
+\end{exercise}
+
+
+\begin{exercise}{Determinanter - 10}
+	
+	Givet matricen
+	
+	\[
+	A = \left[\begin{array}{rrr}
+	-2 & 5 & 8 \\ 
+	9 & -3 & 2 \\
+	1 & 6 & 7
+	\end{array} \right]
+	\]
+	
+	Bestem værdien af $C = \det(A)$.
+	
+	$C$ = \answerbox{217}
+	
+	\hint
+	Determinanten af en $3 \times 3$ matrix er givet ved udtrykket.
+	\[
+	\det \left( \left[\begin{array}{rrr}
+	a & b & c \\ 
+	d & e & f \\
+	g & h & i
+	\end{array} \right] \right) = a \cdot e \cdot i + d \cdot h \cdot c + g \cdot b \cdot f - a \cdot h \cdot f - d \cdot b \cdot i - g \cdot e \cdot c
+	\]
+	
+	\hint
+	Indsæt værdierne i udtrykket.
+	
+	\hint
+	\[
+	\det \left( A \right) = -2 \cdot (-3) \cdot 7 + 9 \cdot 6 \cdot 8 + 5 \cdot 2 \cdot 1 - (-2) \cdot 6 \cdot 2 - 9 \cdot 5 \cdot 7 - 1 \cdot (-3) \cdot 8
+	\]
+	
+	\hint
+	Forenkel resultatet.
+	
+	\hint
+	\[
+	\det \left( A \right) = 42 + 432 + 10 + 24 - 315 + 24 = 217
+	\]
+	
+\end{exercise}
 
 
 
