--- a/linearalgebra/05bestemmeinversevhagausselimination.tex
+++ b/linearalgebra/05bestemmeinversevhagausselimination.tex
@@ -30,7 +30,7 @@ hvor $I$ er en identitetsmatrice.
 
 \hint
 Opskriv $A$ matricen og en $2 \times 2$ identitetsmatrice
-ved siden af hinanden, så de står op udviddet matrix form.
+ved siden af hinanden, så de står op udvidet matrix form.
 
 \hint
 Det ser således ud
@@ -114,7 +114,7 @@ hvor $I$ er en identitetsmatrice.
 
 \hint
 Opskriv $A$ matricen og en $2 \times 2$ identitetsmatrice
-ved siden af hinanden, så de står op udviddet matrix form.
+ved siden af hinanden, så de står op udvidet matrix form.
 
 \hint
 Det ser således ud
@@ -183,5 +183,989 @@ A^{-1} = \left[\begin{array}{cc}
 
 
 \end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 3}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{cc}
+	5 & 3 \\ 
+	2 & 3
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{1}{3} & \frac{-1}{3} \\
+		\frac{-2}{9} & \frac{5}{9}
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $2 \times 2$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{cc|cc}
+	5 & 3 & 1 & 0 \\ 
+	2 & 3 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - 2 \cdot \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & -3 & 1 & -2 \\ 
+	2 & 3 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} - 2 \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & -3 & 1 & -2 \\ 
+	0 & 9 & -2 & 5
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} / 9 \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & -3 & 1 & -2 \\ 
+	0 & 1 & \frac{-2}{9} & \frac{5}{9}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} + 3 \cdot \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 0 & \frac{1}{3} & \frac{-1}{3} \\ 
+	0 & 1 & \frac{-2}{9} & \frac{5}{9}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{cc}
+	\frac{1}{3} & \frac{-1}{3} \\ 
+	\frac{-2}{9} & \frac{5}{9}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 4}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{cc}
+	5 & 7 \\ 
+	4 & 8
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{2}{3} & \frac{-7}{12} \\
+		\frac{-1}{3} & \frac{5}{12}
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $2 \times 2$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{cc|cc}
+	5 & 7 & 1 & 0 \\ 
+	4 & 8 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & -1 & 1 & -1 \\ 
+	4 & 8 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} - 4 \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & -1 & 1 & -1 \\ 
+	0 & 12 & -4 & 5
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} / 12 \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & -1 & 1 & -1 \\ 
+	0 & 1 & \frac{-1}{3} & \frac{5}{12}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} + \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 0 & \frac{2}{3} & \frac{-7}{12} \\ 
+	0 & 1 & \frac{-1}{3} & \frac{5}{12}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{cc}
+	\frac{2}{3} & \frac{-7}{12} \\ 
+	\frac{-1}{3} & \frac{5}{12}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 5}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{cc}
+	-2 & 1 \\ 
+	4 & 3
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{-3}{10} & \frac{1}{10} \\
+		\frac{2}{5} & \frac{1}{5}
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $2 \times 2$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{cc|cc}
+	-2 & 1 & 1 & 0 \\ 
+	4 & 3 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} + 2 \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	-2 & 1 & 1 & 0 \\ 
+	0 & 5 & 2 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} \cdot \frac{-1}{2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & \frac{-1}{2} & \frac{-1}{2} & 0 \\ 
+	0 & 5 & 2 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} / 5 \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & \frac{-1}{2} & \frac{-1}{2} & 0 \\ 
+	0 & 1 & \frac{2}{5} & \frac{1}{5}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} + \frac{1}{2} \cdot \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 0 & \frac{-3}{10} & \frac{1}{10} \\ 
+	0 & 1 & \frac{2}{5} & \frac{1}{5}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{cc}
+	\frac{-3}{10} & \frac{1}{10} \\ 
+	\frac{2}{5} & \frac{1}{5}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 6}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{cc}
+	7 & -2 \\ 
+	2 & -4
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{1}{6} & \frac{-1}{12} \\
+		\frac{1}{12} & \frac{-7}{24}
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $2 \times 2$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{cc|cc}
+	7 & -2 & 1 & 0 \\ 
+	2 & -4 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - 3 \cdot  \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 10 & 1 & -3 \\ 
+	2 & -4 & 0 & 1
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} - 2 \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 10 & 1 & -3 \\ 
+	0 & -24 & -2 & 7
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} \cdot \frac{-1}{24} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 10 & 1 & -3 \\ 
+	0 & 1 & \frac{1}{12} & \frac{-7}{24}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - 10 \cdot \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{cc|cc}
+	1 & 0 & \frac{1}{6} & \frac{-1}{12} \\ 
+	0 & 1 & \frac{1}{12} & \frac{-7}{24}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{cc}
+	\frac{1}{6} & \frac{-1}{12} \\ 
+	\frac{1}{12} & \frac{-7}{24}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 7}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{ccc}
+	3 & 2 & 1 \\ 
+	2 & 1 & 4 \\
+	5 & 3 & 2 
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{-10}{3} & \frac{-1}{3} & \frac{7}{3} \\
+		\frac{16}{3} & \frac{1}{3} & \frac{-10}{3} \\
+		\frac{1}{3} & \frac{1}{3} & \frac{-1}{3} 
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $3 \times 3$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{ccc|ccc}
+	3 & 2 & 1 & 1 & 0 & 0 \\ 
+	2 & 1 & 4 & 0 & 1 & 0 \\
+	5 & 3 & 2 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} -  \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 1 & -3 & 1 & -1 & 0 \\ 
+	2 & 1 & 4 & 0 & 1 & 0 \\
+	5 & 3 & 2 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} - 2 \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 1 & -3 & 1 & -1 & 0 \\ 
+	0 & -1 & 10 & -2 & 3 & 0 \\
+	5 & 3 & 2 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} - 5 \cdot  \text{R1} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 1 & -3 & 1 & -1 & 0 \\ 
+	0 & -1 & 10 & -2 & 3 & 0 \\
+	0 & -2 & 17 & -5 & 5 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} \cdot (-1) \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 1 & -3 & 1 & -1 & 0 \\ 
+	0 & 1 & -10 & 2 & -3 & 0 \\
+	0 & -2 & 17 & -5 & 5 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} + 2 \cdot \text{R2} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 1 & -3 & 1 & -1 & 0 \\ 
+	0 & 1 & -10 & 2 & -3 & 0 \\
+	0 & 0 & -3 & -1 & -1 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} \cdot \frac{-1}{3}  \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 1 & -3 & 1 & -1 & 0 \\ 
+	0 & 1 & -10 & 2 & -3 & 0 \\
+	0 & 0 & 1 & \frac{1}{3} & \frac{1}{3} & \frac{-1}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 7 & -1 & 2 & 0 \\ 
+	0 & 1 & -10 & 2 & -3 & 0 \\
+	0 & 0 & 1 & \frac{1}{3} & \frac{1}{3} & \frac{-1}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} + 10 \cdot \text{R3}  \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 7 & -1 & 2 & 0 \\ 
+	0 & 1 & 0 & \frac{16}{3} & \frac{1}{3} & \frac{-10}{3} \\
+	0 & 0 & 1 & \frac{1}{3} & \frac{1}{3} & \frac{-1}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - 7 \cdot \text{R3}  \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & \frac{-10}{3} & \frac{-1}{3} & \frac{7}{3} \\ 
+	0 & 1 & 0 & \frac{16}{3} & \frac{1}{3} & \frac{-10}{3} \\
+	0 & 0 & 1 & \frac{1}{3} & \frac{1}{3} & \frac{-1}{3}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{ccc}
+	\frac{-10}{3} & \frac{-1}{3} & \frac{7}{3} \\ 
+	\frac{16}{3} & \frac{1}{3} & \frac{-10}{3} \\
+	\frac{1}{3} & \frac{1}{3} & \frac{-1}{3}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 8}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{ccc}
+	1 & 4 & 5 \\ 
+	2 & 3 & 1 \\
+	-1 & 2 & 4 
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{10}{9} & \frac{-2}{3} & \frac{-11}{9} \\
+		-1  & 1 & 1 \\
+		\frac{7}{9} & \frac{-2}{3} & \frac{-5}{9} 
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $3 \times 3$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 4 & 5 & 1 & 0 & 0 \\ 
+	2 & 3 & 1 & 0 & 1 & 0 \\
+	-1 & 2 & 4 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} -  2 \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 4 & 5 & 1 & 0 & 0 \\ 
+	0 & -5 & -9 & -2 & 1 & 0 \\
+	-1 & 2 & 4 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} + \text{R1} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 4 & 5 & 1 & 0 & 0 \\ 
+	0 & -5 & -9 & -2 & 1 & 0 \\
+	0 & 6 & 9 & 1 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} +  \text{R3} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 4 & 5 & 1 & 0 & 0 \\ 
+	0 & 1 & 0 & -1 & 1 & 1 \\
+	0 & 6 & 9 & 1 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - 4 \cdot \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 5 & 5 & -4 & -4 \\ 
+	0 & 1 & 0 & -1 & 1 & 1 \\
+	0 & 6 & 9 & 1 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} - 6 \cdot \text{R2} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 5 & 5 & -4 & -4 \\ 
+	0 & 1 & 0 & -1 & 1 & 1 \\
+	0 & 0 & 9 & 7 & -6 & -5 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} \cdot \frac{1}{9}  \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 5 & 5 & -4 & -4 \\ 
+	0 & 1 & 0 & -1 & 1 & 1 \\
+	0 & 0 & 1 & \frac{7}{9} & \frac{-2}{3} & \frac{-5}{9} 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - 5 \cdot \text{R3} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & \frac{10}{9} & \frac{-2}{3} & \frac{-11}{9} \\ 
+	0 & 1 & 0 & -1 & 1 & 1 \\
+	0 & 0 & 1 & \frac{7}{9} & \frac{-2}{3} & \frac{-5}{9} 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{ccc}
+	\frac{10}{9} & \frac{-2}{3} & \frac{-11}{9} \\ 
+	-1 & 1 & 1 \\
+	\frac{7}{9} & \frac{-2}{3} & \frac{-5}{9} 
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 9}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{ccc}
+	4 & 2 & 3 \\ 
+	0 & 5 & 3 \\
+	3 & 2 & 3 
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		1 & 0 & -1 \\
+		1 & \frac{1}{3} & \frac{-4}{3} \\
+		\frac{-5}{3} & \frac{-2}{9} & \frac{20}{9} 
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $3 \times 3$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{ccc|ccc}
+	4 & 2 & 3 & 1 & 0 & 0 \\ 
+	0 & 5 & 3 & 0 & 1 & 0 \\
+	3 & 2 & 3 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} -  \text{R3} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & 1 & 0 & -1 \\ 
+	0 & 5 & 3 & 0 & 1 & 0 \\
+	3 & 2 & 3 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} - 3 \cdot \text{R1} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & 1 & 0 & -1 \\ 
+	0 & 5 & 3 & 0 & 1 & 0 \\
+	0 & 2 & 3 & -3 & 0 & 4 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} - 2 \cdot  \text{R3} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & 1 & 0 & -1 \\ 
+	0 & 1 & -3 & 6 & 1 & -8 \\
+	0 & 2 & 3 & -3 & 0 & 4 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} - 2 \cdot  \text{R2} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & 1 & 0 & -1 \\ 
+	0 & 1 & -3 & 6 & 1 & -8 \\
+	0 & 0 & 9 & -15 & -2 & 20 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} \cdot \frac{1}{9} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & 1 & 0 & -1 \\ 
+	0 & 1 & -3 & 6 & 1 & -8 \\
+	0 & 0 & 1 & \frac{-5}{3} & \frac{-2}{9} & \frac{20}{9} 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} + 3 \text{R3} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & 1 & 0 & -1 \\ 
+	0 & 1 & 0 & 1 & \frac{1}{3} & \frac{-4}{3} \\
+	0 & 0 & 1 & \frac{-5}{3} & \frac{-2}{9} & \frac{20}{9} 
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{ccc}
+	1 & 0 & -1 \\ 
+	1 & \frac{1}{3} & \frac{-4}{3} \\
+	\frac{-5}{3} & \frac{-2}{9} & \frac{20}{9} 
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
+\begin{exercise}{Bestemme den inverse vha. Gauss elimination - 10}
+	
+	Bestem den inverse af matricen $A$, der er givet herunder
+	\[
+	A = \left[\begin{array}{ccc}
+	3 & 1 & 2 \\ 
+	2 & 5 & 1 \\
+	-1 & 1 & 2 
+	\end{array} \right]
+	\]
+	
+	Værdien af $A^{-1}$ er:
+	\begin{answermatrix}
+		\frac{1}{4} & 0 & \frac{-1}{4} \\
+		\frac{-5}{36} & \frac{2}{9} & \frac{1}{36} \\
+		\frac{7}{36} & \frac{-1}{9} & \frac{13}{36} 
+	\end{answermatrix}
+	
+	\hint
+	Vi ønsker at løse ligningssystemet
+	\[
+	A \cdot A^{-1} = I
+	\]
+	hvor $I$ er en identitetsmatrice.
+	
+	\hint
+	Opskriv $A$ matricen og en $3 \times 3$ identitetsmatrice
+	ved siden af hinanden, så de står op udvidet matrix form.
+	
+	\hint
+	Det ser således ud
+	\[
+	\left[\begin{array}{ccc|ccc}
+	3 & 1 & 2 & 1 & 0 & 0 \\ 
+	2 & 5 & 1 & 0 & 1 & 0 \\
+	-1 & 1 & 2 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Anvend Gauss-Jordan elimination på matricen.
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} -  \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & -4 & 1 & 1 & -1 & 0 \\ 
+	2 & 5 & 1 & 0 & 1 & 0 \\
+	-1 & 1 & 2 & 0 & 0 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} + \text{R1}  \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & -4 & 1 & 1 & -1 & 0 \\ 
+	2 & 5 & 1 & 0 & 1 & 0 \\
+	0 & -3 & 3 & 1 & -1 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} - 2 \cdot  \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & -4 & 1 & 1 & -1 & 0 \\ 
+	0 & 13 & -1 & -2 & 3 & 0 \\
+	0 & -3 & 3 & 1 & -1 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} \cdot \frac{1}{13} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & -4 & 1 & 1 & -1 & 0 \\ 
+	0 & 1 & \frac{-1}{13} & \frac{-2}{13} & \frac{3}{13} & 0 \\
+	0 & -3 & 3 & 1 & -1 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} + 4 \cdot \text{R2} \to \text{R1}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & \frac{9}{13} & \frac{5}{13} & \frac{-1}{13} & 0 \\ 
+	0 & 1 & \frac{-1}{13} & \frac{-2}{13} & \frac{3}{13} & 0 \\
+	0 & -3 & 3 & 1 & -1 & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} + 3 \cdot \text{R2}  \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & \frac{9}{13} & \frac{5}{13} & \frac{-1}{13} & 0 \\ 
+	0 & 1 & \frac{-1}{13} & \frac{-2}{13} & \frac{3}{13} & 0 \\
+	0 & 0 & \frac{36}{13} & \frac{7}{13} & \frac{-4}{13} & 1 
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R3} \cdot \frac{13}{36} \to \text{R3}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & \frac{9}{13} & \frac{5}{13} & \frac{-1}{13} & 0 \\ 
+	0 & 1 & \frac{-1}{13} & \frac{-2}{13} & \frac{3}{13} & 0 \\
+	0 & 0 & 1 & \frac{7}{36} & \frac{-1}{9} & \frac{13}{36}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R2} + \frac{1}{13} \cdot \text{R1} \to \text{R2}$.
+	
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & \frac{9}{13} & \frac{5}{13} & \frac{-1}{13} & 0 \\ 
+	0 & 1 & 0 & \frac{-5}{36} & \frac{2}{9} & \frac{1}{36} \\
+	0 & 0 & 1 & \frac{7}{36} & \frac{-1}{9} & \frac{13}{36}
+	\end{array} \right]
+	\]
+	
+	\hint
+	Udfør rækkeoperationen: $\text{R1} - \frac{9}{13} \cdot \text{R3} \to \text{R1}$.
+
+	\hint
+	\[
+	\left[\begin{array}{ccc|ccc}
+	1 & 0 & 0 & \frac{1}{4} & 0 & \frac{-1}{4} \\ 
+	0 & 1 & 0 & \frac{-5}{36} & \frac{2}{9} & \frac{1}{36} \\
+	0 & 0 & 1 & \frac{7}{36} & \frac{-1}{9} & \frac{13}{36}
+	\end{array} \right]
+	\]
+	
+	
+	\hint
+	Vi kan nu aflæse værdien af den inverse.
+	\[
+	A^{-1} = \left[\begin{array}{ccc}
+	\frac{1}{4} & 0 & \frac{-1}{4} \\ 
+	\frac{-5}{36} & \frac{2}{9} & \frac{1}{36} \\
+	\frac{7}{36} & \frac{-1}{9} & \frac{13}{36}
+	\end{array} \right]
+	\]
+	
+	
+\end{exercise}
+
+
 
 \end{document}
