--- a/integration/06partialfractions.tex
+++ b/integration/06partialfractions.tex
@@ -72,6 +72,552 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 
 \end{exercise}
 
+\begin{exercise}{Opsplitning i partialbrøker 1-2}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{5 + 2x}{(x - 1) \cdot (x + 3)}
+	\]
+	
+	$I$ = \answerbox{\frac{7}{4(x-1)} + \frac{1}{4(x+3)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{5 + 2x}{(x - 1) \cdot (x + 3)} = 
+	\frac{A}{x - 1} + \frac{B}{x + 3}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	5 + 2x = A \cdot (x + 3) + B \cdot (x - 1)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	5 = 3A - B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	2 = A + B
+	\]
+	
+	\hint
+	Løs de to ligninger med de to ubekendte.
+	
+	\hint
+	Læg de to ligninger sammen med hinanden og bestem $A$.
+	\[
+	7 = 4A \quad	\Rightarrow		\quad		A = \frac{7}{4}
+	\]
+	
+	\hint
+	Bestem $B$ ved at indsætte værdien af $A$.
+	\[
+	2 =  \frac{7}{4} + B \quad 	\Rightarrow		\quad B = -\frac{1}{4}
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{7}{4(x-1)} + \frac{1}{4(x+3)}
+	\]
+	
+	
+	
+\end{exercise}
+
+\begin{exercise}{Opsplitning i partialbrøker 1-3}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{6 - 2x}{(x + 5) \cdot (x + 2)}
+	\]
+	
+	$I$ = \answerbox{\frac{10}{3(x+2)} - \frac{16}{3(x+5)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{6 - 2x}{(x + 5) \cdot (x + 2)} = 
+	\frac{A}{x + 5} + \frac{B}{x + 2}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	6 - 2x = A \cdot (x + 2) + B \cdot (x + 5)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	6 = 2A +  5B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	-2 = A + B
+	\]
+	
+	\hint
+	Løs de to ligninger med de to ubekendte.
+	
+	\hint
+	Træk to gange den anden ligning fra den første ligning og bestem $B$. 
+	\[
+	10 = 3B \quad	\Rightarrow		\quad		B = \frac{10}{3}
+	\]
+	
+	\hint
+	Bestem $A$ ved at indsætte værdien af $B$.
+	\[
+	-2 =  A + \frac{10}{3} \quad 	\Rightarrow		\quad A = -\frac{16}{3}
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{10}{3(x+2)} - \frac{16}{3(x+5)}
+	\]
+	
+	
+	
+\end{exercise}
+
+\begin{exercise}{Opsplitning i partialbrøker 1-4}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{4 - 2x}{(x + 7) \cdot (x - 3)}
+	\]
+	
+	$I$ = \answerbox{\frac{-9}{5(x+7)} + \frac{1}{5(x-3)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{4 - 2x}{(x + 7) \cdot (x - 3)} = 
+	\frac{A}{x + 7} + \frac{B}{x - 3}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	4 - 2x = A \cdot (x - 3) + B \cdot (x + 7)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	4 = -3A + 7B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	-2 = A + B
+	\]
+	
+	\hint
+	Løs de to ligninger med de to ubekendte.
+	
+	\hint
+	Læg 3 gange den anden ligning til den første ligning og bestem $B$.
+	\[
+	-2 = 10B \quad	\Rightarrow		\quad		B = -\frac{1}{5}
+	\]
+	
+	\hint
+	Bestem $A$ ved at indsætte værdien af $B$.
+	\[
+	-2 =  A - \frac{1}{5} \quad 	\Rightarrow		\quad A = -\frac{9}{5}
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{-9}{5(x+7)} + \frac{1}{5(x-3)}
+	\]
+	
+	
+	
+\end{exercise}
+
+\begin{exercise}{Opsplitning i partialbrøker 1-5}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{8 + 3x}{(x + 5) \cdot (x - 2)}
+	\]
+	
+	$I$ = \answerbox{\frac{1}{(x+5)} + \frac{2}{(x-2)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{8 + 3x}{(x + 5) \cdot (x - 2)} = 
+	\frac{A}{x + 5} + \frac{B}{x - 2}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	8 + 3x = A \cdot (x - 2) + B \cdot (x + 5)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	8 = -2A + 5B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	3 = A + B
+	\]
+	
+	\hint
+	Løs de to ligninger med de to ubekendte.
+	
+	\hint
+	Læg to gange den anden ligning til den første ligning og bestem $B$.
+	\[
+	14 = 7B \quad	\Rightarrow		\quad		B = 2
+	\]
+	
+	\hint
+	Bestem $A$ ved at indsætte værdien af $B$.
+	\[
+	3 =  A + 2 \quad 	\Rightarrow		\quad A = 1
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{1}{(x+5)} + \frac{2}{(x-2)}
+	\]
+	
+	
+	
+\end{exercise}
+
+\begin{exercise}{Opsplitning i partialbrøker 1-6}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{-3 - x}{(x + 2) \cdot (x + 4)}
+	\]
+	
+	$I$ = \answerbox{\frac{-1}{2(x+1)} - \frac{1}{2(x+4)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{-3 - x}{(x + 2) \cdot (x + 4)} = 
+	\frac{A}{x + 2} + \frac{B}{x + 4}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	-3 - x = A \cdot (x + 4) + B \cdot (x + 2)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	-3 = 4A+ 2B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	-1 = A + B
+	\]
+	
+	\hint
+	Løs de to ligninger med de to ubekendte.
+	
+	\hint
+	Træk to gange den anden ligning fra den første ligning og bestem $A$.
+	\[
+	-1 = 2A \quad	\Rightarrow		\quad		A = \frac{-1}{2}
+	\]
+	
+	\hint
+	Bestem $B$ ved at indsætte værdien af $A$.
+	\[
+	-1 =  -\frac{1}{2} + B \quad 	\Rightarrow		\quad B = -\frac{1}{2}
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{-1}{2(x+1)} - \frac{1}{2(x+4)}
+	\]
+	
+	
+	
+\end{exercise}
+
+\begin{exercise}{Opsplitning i partialbrøker 1-7}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{6 + x}{(x + 1)^2 \cdot (x + 2)}
+	\]
+	
+	$I$ = \answerbox{\frac{-4}{(x+1)} + \frac{5}{(x+1)^2} + \frac{4}{(x+2)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{6 + x}{(x + 1)^2 \cdot (x + 2)} = 
+	\frac{A_1}{x + 1} + \frac{A_2}{(x+1)^2} + \frac{B}{x + 2}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	6 + x = A_1 \cdot (x + 1)(x+2) + A_2 \cdot (x+2)  + B \cdot (x + 1)^2
+	\]
+	
+	\hint
+	Gang parenteserne ud og reducer udtrykket
+	
+	\hint
+	\[
+	6 + x = A_1(x^2 + 3x + 2) + A_2(x+2) + B(x^2 + 2x + 1)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	6 = 2A_1 + 2A_2 + B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	1 = 3A_1 + A_2 + 2B
+	\]
+		
+	\hint
+	Opstil en ligning ud fra leddene med $x^2$ i udtrykket.
+	
+	\hint
+	\[
+	0 = A_1 + B
+	\]
+	
+	\hint
+	Løs de 3 ligninger med de 3 ubekendte.
+	
+	\hint
+	Isoler $B$ i den 3. ligning.
+	\[
+	B  =  -A_1
+	\]
+	
+	\hint
+	Indsæt udtrykket for $B$ i den 2. ligning og isoler $A_2$.
+	\[
+	1 = 3A_1 + A_2 + 2(-A_1) = A_1 + A_2 \quad	\Rightarrow 	\quad A_2 = 1 - A_1
+	\]
+	
+	\hint
+	Indsæt udtrykket for $B$ og $A_2$ i den 1. ligning og bestem $A_1$.
+	\[
+	6 = 2 A_1 + 2(1-A_1) -A_1 = 2 - A_1		\quad 	\Rightarrow 		\quad A_1 = -4
+	 \]
+	
+	\hint
+	Bestem $B$ ved at indsætte værdien af $A_1$.
+	\[
+	B = - (-4) = 4 
+	\]
+	
+	\hint
+	Bestem $A_2$ ved at indsætte værdien af $A_1$.
+	\[
+	A_2 = 1 - (-4) = 5
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{-4}{(x+1)} + \frac{5}{(x+1)^2} + \frac{4}{(x+2)}
+	\]
+	
+	
+	
+\end{exercise}
+
+\begin{exercise}{Opsplitning i partialbrøker 1-8}
+	
+	Opdel udtrykket herunder i partialbrøker
+	\[
+	I = \frac{x - 1}{(x + 1)^2 \cdot (x + 3)}
+	\]
+	
+	$I$ = \answerbox{\frac{1}{(x+1)} - \frac{1}{(x+1)^2} - \frac{1}{(x+3)}} \\
+	
+	\hint
+	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
+	\[
+	\frac{x - 1}{(x + 1)^2 \cdot (x + 3)} = 
+	\frac{A_1}{x + 1} + \frac{A_2}{(x+1)^2} + \frac{B}{x + 3}
+	\]
+	
+	\hint
+	Nu skal de ubekendte bestemmes.
+	
+	\hint
+	Gang igennem med den fælles nævner.
+	
+	\hint
+	\[
+	x-1 = A_1 \cdot (x + 1)(x+3) + A_2 \cdot (x+3)  + B \cdot (x + 1)^2
+	\]
+	
+	\hint
+	Gang parenteserne ud og reducer udtrykket
+	
+	\hint
+	\[
+	x - 1 = A_1(x^2 + 4x + 3) + A_2(x+3) + B(x^2 + 2x + 1)
+	\]
+	
+	\hint
+	Opstil en ligning ud fra de konstante led i udtrykket.
+	
+	\hint
+	\[
+	-1 = 3A_1 + 3A_2 + B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x$ i udtrykket.
+	
+	\hint
+	\[
+	1 = 4A1 + A_2 + 2B
+	\]
+	
+	\hint
+	Opstil en ligning ud fra leddene med $x^2$ i udtrykket.
+	
+	\hint
+	\[
+	0 = A_1 + B
+	\]
+	
+	\hint
+	Løs de 3 ligninger med de 3 ubekendte.
+	
+	\hint
+	Isoler $A_1$ i den 3. ligning.
+	\[
+	A_1  =  -B
+	\]
+	
+	\hint
+	Indsæt udtrykket for $A_1$ i den 2. ligning og isoler $A_2$.
+	\[
+	1 = 4(-B) + A_2 + 2B = -2B + A_2 \quad	\Rightarrow 	\quad A_2 = 1 + 2B
+	\]
+	
+	\hint
+	Indsæt udtrykket for $A_1$ og $A_2$ i den 1. ligning og bestem $B$.
+	\[
+	-1= 3(-B) + 3(2B+1) + B = 4B + 3	\quad 	\Rightarrow 		\quad B =  -1
+	\]
+	
+	\hint
+	Bestem $A_1$ ved at indsætte værdien af $B$.
+	\[
+	A_1 = - (-1) = 1 
+	\]
+	
+	\hint
+	Bestem $A_2$ ved at indsætte værdien af $B$.
+	\[
+	A_2 = 1 + 2(-1) = -1
+	\]
+	
+	\hint
+	Indsæt konstanterne i partialbrøkopsplitningen.
+	\[
+	I = \frac{1}{(x+1)} - \frac{1}{(x+1)^2} - \frac{1}{(x+3)}
+	\]
+	
+	
+	
+\end{exercise}
+
+
+
 
 
 \end{document}
