--- a/03differentiation/01differentiatesimpleexpressions.tex
+++ b/03differentiation/01differentiatesimpleexpressions.tex
@@ -110,4 +110,195 @@ Sæt $n = 6$
 \]
 \end{exercise}
 
+\begin{exercise}{Differentiering 1 - 06}
+	
+	Bestem $\frac{d}{dx} \cos(x) $.
+	
+	\answerbox{-\sin(x)}
+	
+	\hint
+	
+	Differentiering af de periodiske funktioner sinus og cosinus kan gøres ved at "gå med uret rundt" i enhedscirklen.
+	
+	\hint 
+	
+	Starter på $\cos(x)$ og går med uret rundt.
+	\[
+	\frac{d}{dx} \cos(x) = -\sin(x)
+	\]
+	
+
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 07}
+	
+	Bestem $\frac{d}{dx} \sin(x) $.
+
+\answerbox{\cos(x)}
+
+\hint
+
+Differentiering af de periodiske funktioner sinus og cosinus kan gøres ved at "gå med uret rundt" i enhedscirklen.
+
+\hint 
+
+Starter på $\sin(x)$ og går med uret rundt.
+\[
+\frac{d}{dx} \sin(x) = \cos(x)
+\]
+
+
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 08}
+	
+	Bestem $\frac{d}{dx} 3 x^5$.
+	
+	\answerbox{15 x^4}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	
+	Sæt $n = 5$
+	\[
+	\frac{d}{dx} 3 x^5 = 3 \cdot 5 \cdot x^{5 - 1} = 15 x^4
+	\]
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 09}
+	
+	Bestem $\frac{d}{dx} \left(x^2 + 1 \right)$.
+	
+	\answerbox{2x}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	
+	Sæt $n = 2$
+	\[
+	\frac{d}{dx} \left(x^2 + 1 \right) = \frac{d}{dx} x^2 + \frac{d}{dx} 1 =  2 \cdot x^{2 - 1} + 0 = 2 x
+	\]
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 10}
+	
+	Bestem $\frac{d}{dx} e^x$.
+	
+	\answerbox{e^x}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{d}{dx} e^x = e^x
+	\]
+	
+	\hint
+	
+	\[
+	\frac{d}{dx} e^x = e^x
+	\]
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 11}
+	
+	Bestem $\frac{d}{dx}\left( \ln(x) + 2 \right)$.
+	
+	\answerbox{\frac{1}{x}}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{d}{dx} \ln(x) = \frac{1}{x}
+	\]
+	
+	\hint
+	
+	\[
+	\frac{d}{dx} \left( \ln(x) + 2 \right) =  \frac{d}{dx} \ln(x) + \frac{d}{dx} 2 =  \frac{1}{x}
+	\]
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 12}
+	
+	Bestem $\frac{d}{dx} \sqrt{x}$.
+	
+	\answerbox{\frac{1}{2 \sqrt{x}}}
+	
+	\hint
+	Benyt formlen
+	\[
+	\sqrt{x} = x^{\frac{1}{2}}
+	\]
+	
+	\hint
+	Benyt formlen
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	
+	Sæt $n = \frac{1}{2}$
+	\[
+	\frac{d}{dx} x^{\frac{1}{2}} = \frac{1}{2} \cdot x^{\left(\frac{1}{2} - 1\right)} = \frac{1}{2} \cdot x^{-\frac{1}{2}} = \frac{1}{2 \sqrt{x}}
+	\]
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 13}
+	
+	Bestem $\frac{d}{dx} x^{-1}$.
+	
+	\answerbox{-x^{-2}}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	
+	Sæt $n = -1$
+	\[
+	\frac{d}{dx} x^{-1} = -1 \cdot x^{\left(-1 - 1\right)} = - x^{-2}
+	\]
+\end{exercise}
+
+\begin{exercise}{Differentiering 1 - 14}
+	
+	Bestem $\frac{d}{dx} x^{-3}$.
+	
+	\answerbox{-3x^{-4}}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	
+	Sæt $n = -3$
+	\[
+	\frac{d}{dx} x^{-3} = -3 \cdot x^{\left( -3 - 1 \right)} = -3 x^{-4}
+	\]
+\end{exercise}
+
 \end{document}
