--- a/03differentiation/02chainrule.tex
+++ b/03differentiation/02chainrule.tex
@@ -57,4 +57,213 @@ Indsæt i kædereglen
 
 \end{exercise}
 
+\begin{exercise}{Differentiering 2 - 03}
+	
+	Bestem $\frac{d}{dx} \left(x^2 + 1	\right)^5 $.
+	
+	\answerbox{10x \cdot \left(x^2 + 1 \right)^4}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = x^5$ og $g(x) = x^2 + 1$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = 5x^4  \qquad g'(x) = 2x
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \left(x^2 + 1 \right)^5 = 5 \left(x^2 + 1 \right)^4 \cdot 2x = 10 x \cdot \left(x^2 + 1 \right)^4
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 04}
+	
+	Bestem $\frac{d}{dx} \cos(2x)$.
+	
+	\answerbox{-2 \sin(2x)}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = \cos(x)$ og $g(x) = 2x$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = - \sin(x) \qquad g'(x) = 2
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \cos(2x) = -\sin(2x) \cdot 2 = -2 \sin(2x)
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 05}
+	
+	Bestem $\frac{d}{dx} e^{3x + x^5}$.
+	
+	\answerbox{e^{3x + x^5} \cdot (5x^4 + 3)}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = e^x$ og $g(x) = 3x + x^5$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = e^x \qquad g'(x) = 3 + 5 x^4
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} e^{3x + x^5} = e^{3x + x^5} \cdot (3 + 5x^4)
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 06}
+	
+	Bestem $\frac{d}{dx} \sqrt{x+3}$.
+	
+	\answerbox{\frac{1}{2 \sqrt{x+3}}}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = \sqrt{x}$ og $g(x) = x+3$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) =\frac{1}{2 \sqrt{x}} \qquad g'(x) = 1 
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \sqrt{x+3} = \frac{1}{2 \sqrt{x + 3}} \cdot 1  = \frac{1}{2 \sqrt{x + 3 }}
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 07}
+	
+	Bestem $\frac{d}{dx} \ln(x^2)$.
+	
+	\answerbox{\frac{2}{x}}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = \ln(x)$ og $g(x) = x^2$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = \frac{1}{x} \qquad g'(x) = 2x
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \ln(x^2) = \frac{1}{x^2} \cdot 2x = \frac{2}{x} 	
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 08}
+	
+	Bestem $\frac{d}{dx} \sin(3x^2+1)$.
+	
+	\answerbox{6x \cos(3x^2 + 1)}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = \sin(x)$ og $g(x) = 3x^2 + 1$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = \cos(x) \qquad g'(x) = 6x
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \sin(3x^2 + 1)  = \cos(3x^2 + 1) \cdot 6x 
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 09}
+	
+	Bestem $\frac{d}{dx} \sqrt{x^3 + x^2 + 1}$.
+	
+	\answerbox{\frac{3x^2 + 2x}{2 \sqrt{x^3 + x^2 + 1}}}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = \sqrt{x}$ og $g(x) = x^3 + x^2 + 1 $ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = \frac{1}{2\sqrt{x}} \qquad g'(x) = 3x^2 + 2x
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \sqrt{x^3 + x^2 + 1} = \frac{1}{2 \sqrt{x^3 + x^2 + 1}} \cdot (3x^2 + 2x) = \frac{3x^2 + 2x}{2 \sqrt{x^3 + x^2 + 1}}
+	\]
+	
+\end{exercise}
+
+\begin{exercise}{Differentiering 2 - 10}
+	
+	Bestem $\frac{d}{dx} \frac{1}{x^2+2x}$.
+	
+	\answerbox{-\frac{2x+2}{(x^2+2x)^2}}
+	
+	\hint
+	Benyt kæde reglen
+	\[
+	\frac{d}{dx} f(g(x)) = f'(g(x)) \cdot g'(x)
+	\]
+	
+	\hint
+	Sæt $f(x) = \frac{1}{x}$ og $g(x) = x^2 + 2x$ og bestem $f'(x)$ og $g'(x)$.
+	\[
+	f'(x) = - \frac{1}{x^2} \qquad g'(x) = 2x + 2
+	\]
+	
+	\hint
+	Indsæt i kædereglen
+	\[
+	\frac{d}{dx} \frac{1}{x^2+2x} = - \frac{1}{(x^2+2x)^2} \cdot (2x + 2 ) = - \frac{2x + 2}{(x^2 + 2x)^2}
+	\]
+	
+\end{exercise}
+
+
 \end{document}
